# reversi_rs

./: .gitignore  Cargo.toml  Dockerfile  build.sh
src/: cli.rs  game.rs  main.rs  message.rs
src/game/: .score.rs.swo  base.rs  board.rs  common.rs  opening_db.rs  score.rs  square.rs  strategy.rs  util.rs
src/game/strategy/: exhausive.rs  naive.rs  nega_scout.rs  opening.rs
src/message/: client.rs  server.rs
