[package]
name = "reversi_rs"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
clap = "2"
lazy_static = "1.4.0"
flate2 = "1.0.16"
tar = "0.4"
